add config for swagger ui Authorize dialog
