# api/src/todoController.ts
@@ -1,6 +1,6 @@
 import * as db from './db';
 import {AddItemRequest, UpdateItemRequest, Todo, DeleteItemRequest} from './types';
-import { Body, Delete, Get, Post, Put, Route, SuccessResponse } from "tsoa";
+import { Body, Delete, Get, Post, Put, Route, Security, SuccessResponse } from "tsoa";
 
 
 @Route("/")
@@ -9,6 +9,7 @@ export class TodoController {
    * Get list of all todo items
    */
   @Get("/")
+  @Security('bearerAuth')
   public async listItems():Promise<Todo[]> {
     return await db.listItems();
   }
@@ -18,6 +19,7 @@ export class TodoController {
    * @param request Provide description for the new Todo
    */
   @Post("/")
+  @Security('bearerAuth')
   @SuccessResponse("201", "Created")
   public async addItem(
     @Body() request:AddItemRequest
@@ -30,6 +32,7 @@ export class TodoController {
    * @param request Json object containing id and done
    */
   @Put("/")
+  @Security('bearerAuth')
   public async updateItem(
     @Body() request:UpdateItemRequest
   ) {
@@ -41,6 +44,7 @@ export class TodoController {
    * @param request Json object with id to delete
    */
   @Delete("/")
+  @Security('bearerAuth')
   public async deleteItem(
     @Body() request:DeleteItemRequest
   ) {
